fixed sessions mobile view, where phone image was overlapping text

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -362,7 +362,7 @@ i{
   }
 
 .device-mockup.galaxy_s5{
-  padding:0
+  padding:167px
 }
   
 a:focus {
